--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+## Application Port
+server.port = 8080
 
+## default connection pool 
+spring.datasource.hikari.connectionTimeout=20000 
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://192.168.18.13:5432/shopping 
+spring.datasource.username=casaos 
+spring.datasource.password=casaos
+
+## Default Schema 
+spring.flyway.schemas=users
+spring.jpa.properties.hibernate.default_schema=users
